changes to final summary

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         .gbp { color: #28a745; font-weight: bold; }
         .usd { color: #007bff; font-weight: bold; }
         .critical { color: red; font-weight: bold; }
+        .goal-price { font-size: 1.2em; font-weight: 900; color: #ff6600; }
     </style>
 </head>
 <body>
@@ -132,10 +133,11 @@
     </table>
 
     <h2 style="color: #007bff;">3. Final Target Summary</h2>
+    <p>This shows the final price needed to sell your *entire* position and achieve your £4,500 profit goal, depending on which traps execute.</p>
     <ul>
         <li>**Anchor Shares Cost:** ~£10,950 (Approx. 24 shares @ ~$681.25)</li>
-        <li>**Full Upside Goal Price (Trap 1 + Trap 2):** <span class="usd">**$728.01 USD**</span></li>
-        <li>**Deep Crash Goal Price (All Traps):** <span class="usd">**$421.73 USD**</span> (The easiest to reach)</li>
+        <li>**Full Upside Goal Price (Trap 1 + Trap 2):** <span class="goal-price">$728.01 USD</span></li>
+        <li>**Deep Crash Goal Price (All Downside Traps Executed):** <span class="goal-price">$518.42 USD</span></li>
     </ul>
 
 </div>
