--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>META Complete Automated Strategy</title>
+    <title>META Complete Automated Strategy (CORRECTED)</title>
     <style>
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 20px; background-color: #f4f7f6; }
         .container { max-width: 1100px; margin: auto; background: white; padding: 30px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); }
@@ -18,6 +18,7 @@
         .goal-price { font-size: 1.1em; font-weight: 900; color: #ff6600; }
         .required-value { background-color: #e6f7ff; font-weight: bold; }
         .critical { color: red; font-weight: bold; }
+        .corrected { background-color: #ffcccc; }
     </style>
 </head>
 <body>
@@ -156,21 +157,21 @@
                 <td class="required-value">£31,515</td>
                 <td class="goal-price">$728.01</td>
             </tr>
-            <tr>
+            <tr class="corrected">
                 <td>**Only Trap 3**</td>
                 <td>Anchor + Trap 3</td>
                 <td>36.82</td>
                 <td>£16,950</td>
                 <td class="required-value">£21,450</td>
-                <td class="goal-price">$647.24</td>
+                <td class="goal-price">$766.82</td>
             </tr>
-            <tr>
+            <tr class="corrected">
                 <td>**Recycle to Trap 5**</td>
                 <td>Anchor + Trap 5 (T3 capital recycled)</td>
                 <td>54.09</td>
                 <td>£24,010</td>
                 <td class="required-value">£28,510</td>
-                <td class="goal-price">$582.49</td>
+                <td class="goal-price">$694.51</td>
             </tr>
             <tr>
                 <td>**Recycle to Trap 6**</td>
