--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>META Complete Automated Strategy (FINAL)</title>
+    <title>META Complete Automated Strategy (FINAL VERIFIED)</title>
     <style>
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 20px; background-color: #f4f7f6; }
         .container { max-width: 1100px; margin: auto; background: white; padding: 30px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); }
@@ -18,7 +18,7 @@
         .goal-price { font-size: 1.1em; font-weight: 900; color: #ff6600; }
         .required-value { background-color: #e6f7ff; font-weight: bold; }
         .critical { color: red; font-weight: bold; }
-        .excluded { background-color: #f0f0f0; text-decoration: line-through; }
+        .manual-buy { background-color: #ffe0b2; }
     </style>
 </head>
 <body>
@@ -26,15 +26,14 @@
 <div class="container">
     <h1>META Automated Strategy: Final Version 🎯</h1>
     <p style="text-align: center; font-size: 1.1em; color: #555;">**Financial Goal:** Achieve £4,500 total profit. **Total Committed Capital (Automated):** £27,065</p>
-    <p class="critical" style="text-align: center;">**NOTE:** The £21,000 intended for Trap 6 is retained as Cash Reserve, outside of the automated orders.</p>
 
-    <h2>1. Automated Buy Orders (GTC Buy Stop-Limit) 🟢</h2>
+    <h2>1. Buy Orders (T2 is Manual Confirmation Buy) 🟢</h2>
     <table>
         <thead>
             <tr>
                 <th>Trap</th>
                 <th>Focus</th>
-                <th>Stop Price (USD) [BUY TRIGGER]</th>
+                <th>Stop Price (USD) / Trigger</th>
                 <th>Limit Price (USD) [MAX PRICE]</th>
                 <th>Capital to Commit (£)</th>
                 <th>Approx. Shares</th>
@@ -44,18 +43,18 @@
             <tr class="buy-trap">
                 <td>Trap 1 (EXECUTED)</td>
                 <td>Initial Breakout</td>
-                <td class="usd">$630.63</td>
+                <td class="usd">$630.63 (Executed)</td>
                 <td class="usd">$631.00</td>
                 <td class="gbp">£8,065</td>
                 <td>~17</td>
             </tr>
-            <tr class="buy-trap">
-                <td>Trap 2</td>
-                <td>Rally Confirmation</td>
-                <td class="usd">$641.00</td>
-                <td class="usd">$641.50</td>
-                <td class="gbp">£8,000</td>
-                <td>~16</td>
+            <tr class="manual-buy">
+                <td>**T2 (MANUAL)**</td>
+                <td>Bull Run Confirmation</td>
+                <td class="usd">**$641.00 (Manual Buy Trigger)**</td>
+                <td class="usd">N/A</td>
+                <td class="gbp">**£16,000**</td>
+                <td>**~32**</td>
             </tr>
             <tr class="buy-trap">
                 <td>Trap 3</td>
@@ -73,59 +72,51 @@
                 <td class="gbp">£13,000</td>
                 <td>~30.09</td>
             </tr>
-            <tr class="excluded">
-                <td>Trap 6 (MANUAL)</td>
-                <td>Deep Crash</td>
-                <td class="usd">$375.00</td>
-                <td class="usd">$375.50</td>
-                <td class="gbp">£0 (Cash Reserve)</td>
-                <td>0</td>
-            </tr>
         </tbody>
     </table>
 
     ---
 
-    <h2>2. Mandatory Risk Protection (Sell Stop-Limit) 🚨</h2>
-    <p class="critical">**ACTION REQUIRED:** Ensure the Sell Stop-Limit for **Trap 1** is placed immediately.</p>
+    <h2>2. Risk Protection (Sell Stop-Limit Orders) 🚨</h2>
+    <p class="critical">**NOTE:** If T2 executes manually, you have the option to combine T1 & T2 into the new **Combined Upside** Stop-Loss below.</p>
     <table>
         <thead>
             <tr>
                 <th>Trap Executed</th>
-                <th>Purchase Price (USD)</th>
+                <th>Purpose</th>
                 <th>Sell Stop Price (USD) [SELL TRIGGER]</th>
                 <th>Sell Limit Price (USD) [MIN PRICE]</th>
-                <th>Max Loss (Approx.)</th>
+                <th>Max Loss/Protection (Approx.)</th>
             </tr>
         </thead>
         <tbody>
             <tr class="sell-trap">
                 <td>Trap 1 (Active)</td>
-                <td class="usd">$631.00</td>
+                <td>Protect T1 Capital</td>
                 <td class="usd">$621.17</td>
                 <td class="usd">$621.17</td>
                 <td>~£120</td>
             </tr>
             <tr class="sell-trap">
-                <td>Trap 2 (Pending)</td>
-                <td class="usd">$641.50</td>
-                <td class="usd">$631.79</td>
-                <td class="usd">$631.79</td>
-                <td>~£100</td>
-            </tr>
-            <tr class="sell-trap">
                 <td>Trap 3 (Pending)</td>
-                <td class="usd">$585.50</td>
+                <td>Protect T3 Capital</td>
                 <td class="usd">$579.15</td>
                 <td class="usd">$579.15</td>
                 <td>~£60</td>
             </tr>
             <tr class="sell-trap">
                 <td>Trap 5 (Pending)</td>
-                <td class="usd">$540.50</td>
+                <td>Protect T5 Capital</td>
                 <td class="usd">$534.60</td>
                 <td class="usd">$534.60</td>
                 <td>~£100</td>
+            </tr>
+            <tr class="manual-buy" style="background-color: #b3e5fc;">
+                <td>**Combined Upside**</td>
+                <td>**Protect All Upside Capital**</td>
+                <td class="usd">**$631.00**</td>
+                <td class="usd">**$630.00**</td>
+                <td>**~£300 (Total Portfolio Break-Even)**</td>
             </tr>
         </tbody>
     </table>
@@ -133,7 +124,6 @@
     ---
 
     <h2 style="color: #007bff;">3. Final Target Summary by Scenario</h2>
-    <p>This table reflects the **highest probability** scenarios using your automated capital (excluding the £21k reserve).</p>
     <table>
         <thead>
             <tr class="target-summary">
@@ -146,13 +136,13 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>**Full Upside (T1 & T2)**</td>
-                <td>Anchor + Trap 1 + Trap 2</td>
-                <td>57</td>
-                <td>£27,015</td>
-                <td class="required-value">£31,515</td>
-                <td class="goal-price">$728.01</td>
+            <tr class="manual-buy">
+                <td>**FINAL UPSIDE**</td>
+                <td>Anchor + Trap 1 + T2 (Manual $\mathbf{\text{£16k}}$)</td>
+                <td>**73**</td>
+                <td>**£35,015**</td>
+                <td class="required-value">**£39,515**</td>
+                <td class="goal-price">**$645.71**</td>
             </tr>
             <tr>
                 <td>**Downside (Only T3)**</td>
@@ -169,14 +159,6 @@
                 <td>£24,010</td>
                 <td class="required-value">£28,510</td>
                 <td class="goal-price">$694.51</td>
-            </tr>
-            <tr class="critical">
-                <td>**MANUAL BOTTOM (T6)**</td>
-                <td>*If* £21k invested at $375.50</td>
-                <td>*~121 shares*</td>
-                <td>*£53,110*</td>
-                <td class="required-value">*£57,610*</td>
-                <td class="goal-price">$364.67 (Manual Target)</td>
             </tr>
         </tbody>
     </table>
