--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>META Complete Automated Strategy (FINAL VERIFIED)</title>
+    <title>META Automated Strategy: FINAL VERIFIED</title>
     <style>
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 20px; background-color: #f4f7f6; }
         .container { max-width: 1100px; margin: auto; background: white; padding: 30px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); }
@@ -24,10 +24,14 @@
 <body>
 
 <div class="container">
-    <h1>META Automated Strategy: Final Version 🎯</h1>
-    <p style="text-align: center; font-size: 1.1em; color: #555;">**Financial Goal:** Achieve £4,500 total profit. **Total Committed Capital (Automated):** £27,065</p>
+    <h1>META Automated Strategy: FINAL VERIFIED 🎯</h1>
+    <p style="text-align: center; font-size: 1.1em; color: #555;">**Financial Goal:** Achieve $\mathbf{\text{£4,500}}$ total profit. **Total Committed Capital (Automated):** $\mathbf{\text{£27,065}}$</p>
 
-    <h2>1. Buy Orders (T2 is Automatic $\mathbf{\text{£16,000}}$ Buy) 🟢</h2>
+    <p class="critical" style="text-align: center; font-weight: bold;">⚠️ **CURRENT ACTION: Trap 1 Executed. Trap 2 Order MUST be placed.**</p>
+    
+    ---
+    
+    <h2>1. Automated Buy Orders (GTC Buy Stop-Limit) 🟢</h2>
     <p class="critical">**ACTION:** The $\mathbf{\text{£16,000}}$ T2 order should be placed immediately as an automated Buy Stop-Limit.</p>
     <table>
         <thead>
@@ -42,7 +46,7 @@
         </thead>
         <tbody>
             <tr class="buy-trap">
-                <td>Trap 1 (EXECUTED)</td>
+                <td>Trap 1 (ACTIVE)</td>
                 <td>Initial Breakout</td>
                 <td class="usd">$630.63 (Executed)</td>
                 <td class="usd">$631.00</td>
@@ -50,7 +54,7 @@
                 <td>~17</td>
             </tr>
             <tr class="auto-buy">
-                <td>**T2 (AUTOMATIC)**</td>
+                <td>**Trap 2 (AUTOMATIC)**</td>
                 <td>Bull Run Confirmation</td>
                 <td class="usd">**$641.00**</td>
                 <td class="usd">**$641.50**</td>
@@ -79,7 +83,7 @@
     ---
 
     <h2>2. Risk Protection (Sell Stop-Limit Orders) 🚨</h2>
-    <p class="critical">**CRITICAL ACTION:** If T2 executes, **cancel the T1 Stop-Loss** and place the new **Combined Upside** Stop-Loss for the entire 73-share position.</p>
+    <p class="critical">**CRITICAL ACTION:** If T2 executes, **cancel the T1 Stop-Loss** and place the new **Combined Upside** Stop-Loss for the entire 73-share position immediately.</p>
     <table>
         <thead>
             <tr>
@@ -125,6 +129,7 @@
     ---
 
     <h2 style="color: #007bff;">3. Final Target Summary by Scenario</h2>
+    <p>This table reflects the required selling price to achieve your $\mathbf{\text{£4,500}}$ total profit goal.</p>
     <table>
         <thead>
             <tr class="target-summary">
